--- a/less/index.less
+++ b/less/index.less
@@ -82,6 +82,7 @@
             position: absolute;
             right: 0;
             top: 40px;
+            z-index: 4;
           }
           &:hover iframe {
             display: block;
@@ -89,5 +90,215 @@
         }
       }
     }
+  }
+}
+
+#nav {
+  position: relative; /*nav2是绝对定位*/
+  height: 134px;
+  background: url(../images/nav_bg.png) center no-repeat;
+  .nav1 {
+    position: relative;
+    z-index: 2;
+    display: flex;
+    width: 1200px;
+    // outline: 1px solid red;
+    margin: 0 auto;
+    .title {
+      display: flex;
+      margin-right: 40px;
+      a {
+        margin: 6px 20px 0 0;
+      }
+      h1 {
+        position: relative;
+        font-size: 24px;
+        color: #ffb400;
+        margin-top: 28px;
+        span {
+          display: block;
+          font-size: 14px;
+          color: #fff;
+          font-weight: normal;
+          margin-top: 2px;
+        }
+        &::after {
+          position: absolute;
+          top: 8px;
+          right: -16px;
+          content: "";
+          width: 69px;
+          height: 19px;
+          background: url(../images/new_version.png);
+        }
+      }
+    }
+    ul {
+      display: flex;
+      li {
+        a {
+          display: block;
+          width: 102px;
+          height: 102px;
+          line-height: 102px;
+          font-size: 16px;
+          color: #fff;
+          text-align: center;
+          &:hover {
+            color: #ffb400;
+          }
+        }
+        &:last-child a {
+          text-decoration: underline;
+          color: #ffb400;
+        }
+      }
+    }
+    .login {
+      position: absolute;
+      right: -120px;
+      top: 0;
+      width: 126px;
+      height: 100px;
+      // outline:1px solid blue;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      & > span {
+        width: 46px;
+        height: 45px;
+        background: url(../images/dia-login-head.png);
+        cursor: pointer;
+      }
+      p {
+        color: #fff;
+        span {
+          color: #ffb400;
+          cursor: pointer;
+        }
+      }
+    }
+  }
+  .nav2 {
+    width: 100%;
+    height: 400px;
+    background: rgba(0, 0, 0, 0.5);
+    position: absolute;
+    z-index: 1;
+    top: 0;
+    left: 0;
+
+    height: 0;
+    overflow: hidden;
+    transition: height 0.3s ease;
+    & > ul {
+      width: 1100px;
+      margin: 115px auto 0;
+      // outline: 1px solid red;
+      position: relative;
+      left: 389px;
+      display: flex;
+      li li {
+        position: relative;
+        width: 106px;
+        height: 40px;
+        line-height: 40px;
+        text-align: center;
+        font-size: 14px;
+      }
+    }
+    a {
+      color: #fff;
+      &:hover {
+        color: #ffb400;
+      }
+    }
+    .new::before,
+    .hot::before {
+      content: "N";
+      width: 18px;
+      height: 18px;
+      line-height: 18px;
+      text-align: center;
+      font-size: 12px;
+      color: #fff;
+      background: #f31419;
+      border-radius: 50%;
+
+      position: absolute;
+      left: 3px;
+      top: 12px;
+    }
+    .hot::before {
+      content: "H";
+      left: 10px;
+      top: 11px;
+    }
+    ul > li:nth-child(2) li:last-child::before {
+      /* 第2列最后一个li*/
+      left: -3px;
+    }
+    ul > li:nth-child(4) li:first-child::before {
+      /* 第4列第一个li*/
+      left: -12px;
+    }
+    ul > li:nth-child(5) li:nth-child(3)::before {
+      /* 第4列第一个li*/
+      left: 3px;
+    }
+    .contact {
+      span {
+        width: 132px;
+        padding: 6px;
+        background: #fff;
+        position: absolute;
+        left: -158px;
+        display: none;
+        img {
+          width: 100%;
+        }
+        &::after {
+          content: "";
+          width: 0;
+          height: 0;
+          border-top: 10px solid transparent;
+          border-bottom: 10px solid transparent;
+          border-left: 20px solid #fff;
+          position: absolute;
+          right: -19px;
+        }
+      }
+      li:hover span{
+        display: block;
+      }
+      li:nth-child(1) span{
+        top: -15px;
+        &:after {
+          top: 26px;
+        }
+      }
+      li:nth-child(2) span{
+        top: -40px;
+        &:after {
+          top: 50px;
+        }
+      }
+      li:nth-child(3) span{
+        top: -48px;
+        &:after {
+          top: 58px;
+        }
+      }
+      li:nth-child(4) span{
+        top: -45px;
+        &:after {
+          top: 55px;
+        }
+      }
+    }
+  }
+  &:hover .nav2{
+    height: 400px;
   }
 }
